--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -118,7 +118,8 @@ interval=persist
 
 # Battery indicator
 [battery]
-command=~/.config/i3/scripts/battery2
+# command=python ~/.config/i3/scripts/battery2
+command=python /home/nicho/dotfiles/i3/scripts/battery2.py
 # for alternative battery script  change to battery1
 # change this to battery-pinebook-pro if you are running on pinebook-pro
 label=
@@ -132,10 +133,10 @@ color=#717171
 full_text=
 command=pavucontrol
 
-[volume-pulseaudio]
-command=~/.config/i3/scripts/volume
-instance=Master
-interval=1
+# [volume-pulseaudio]
+# command=~/.config/i3/scripts/volume
+# instance=Master
+# interval=1
 
 # display keyboard layout name
 # for keyboard layouts switcher
@@ -145,10 +146,6 @@ interval=1
 #[keyboard-layout]
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
-
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
 
 # power-profiles-daemon implementation:
 # needs package power-profiles-daemon installed and the service running see here:
@@ -167,12 +164,12 @@ interval=5
 
 [time]
 #label=
-command=date '+%a %d %b %H:%M:%S'
+command=date '+%I:%M:%S %p'
 interval=1
 
 [shutdown_menu]
 full_text=
-command=~/.config/i3/scripts/powermenu
+command=~/.config/rofi/custom_themes/powermenu.sh
 
 [simple-2]
 full_text=: :
