--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -13,7 +13,8 @@ frame-opacity = 0.9;                      # Opacity of window titlebars and bord
 inactive-opacity-override = false;        # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 focus-exclude = [];
 opacity-rule = [
-  "90:class_g = 'Alacritty' && focused",
+  "85:class_g = 'Alacritty' && focused",
+  "73:class_g = 'Alacritty' && !focused",
   "93:class_g = 'firefox' && !focused"
 ];
 
@@ -29,9 +30,9 @@ blur-background-exclude = [
 
 ## ------ Fading ------ ##
 fading = true;
-fade-in-step = 0.028
-fade-out-step = 0.028
-fade-delta = 4;
+fade-in-step = 0.01;
+fade-out-step = 0.01;
+fade-delta = 3;
 
 
 
@@ -49,7 +50,7 @@ shadow-exclude = [
 
 
 ## ------ Corners ------ ##
-corner-radius = 0
+corner-radius = 10;
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
