--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -3,19 +3,19 @@ import:
 
 font:
   normal:
-    family: Source Code Pro
+    family: Iosevka
     style: Regular
 
   bold:
-    family: Source Code Pro
+    family: Iosevka
     style: Bold
 
   italic:
-    family: Source Code Pro
+    family: Iosevka 
     style: Italic
 
   bold_italic:
-    family: Source Code Pro
+    family: Iosevka
     style: Bold Italic
 
   size: 8
