--- a/tlp/tlp.conf
+++ b/tlp/tlp.conf
@@ -41,7 +41,7 @@ TLP_WARN_LEVEL=3
 # Concerns some desktop and embedded hardware only.
 # Default: <none>
 
-#TLP_DEFAULT_MODE=AC
+TLP_DEFAULT_MODE=BAT
 
 # Operation mode select: 0=depend on power source, 1=always use TLP_DEFAULT_MODE
 # Note: use in conjunction with TLP_DEFAULT_MODE=BAT for BAT settings on AC.
@@ -442,13 +442,13 @@ RESTORE_DEVICE_STATE_ON_STARTUP=0
 # Separate multiple devices with spaces.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_STARTUP="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_STARTUP="nfc"
 
 # Radio devices to enable on startup: bluetooth, nfc, wifi, wwan.
 # Separate multiple devices with spaces.
 # Default: <none>
 
-#DEVICES_TO_ENABLE_ON_STARTUP="wifi"
+DEVICES_TO_ENABLE_ON_STARTUP="wifi bluetooth"
 
 # Radio devices to disable on shutdown: bluetooth, nfc, wifi, wwan.
 # Note: use as a workaround for devices that are blocking shutdown.
@@ -465,18 +465,18 @@ RESTORE_DEVICE_STATE_ON_STARTUP=0
 # Radio devices to enable on AC: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
+DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
 
 # Radio devices to disable on battery: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_BAT="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_BAT="nfc"
 
 # Radio devices to disable on battery when not in use (not connected):
 #   bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="nfc"
 
 # Battery Care -- Charge thresholds
 # Charging starts when the charge level is below the START_CHARGE_THRESH value
